--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +25,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
