--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
+    "babel-plugin-next": "^0.0.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
