--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.1",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "jose": "^6.0.11",
     "lucide-react": "^0.482.0",
     "next": "14.2.4",
     "react": "^18",
@@ -31,6 +33,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
