--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "slick-carousel": "^1.8.1",
     "supabase": "^2.40.7",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
