--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:types": "supabase gen types typescript --project-id gecdrsmwjaigsfyhisbm > src/lib/database.types.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
