--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^11.11.9",
     "jose": "^6.0.11",
     "lucide-react": "^0.482.0",
